<resources>
    <string name="app_name">Material Restaurant Guide</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <string name="action_add">Add Restaurant</string>
    <string name="action_directions">Get Directions</string>
    <string name="title_activity_restaurant">Add a Restaurant</string>
    <string name="btnAddRestaurant">Add Restaurant</string>
    <string name="txtRestaurantName">Restaurant Name</string>
    <string name="txtAddress">Address (e.g. 160 Kendal Ave)</string>
    <string name="txtPhone">Phone</string>
    <string name="txtDesc">Description</string>
    <string name="txtTags">Tags (Separate with comma and space - e.g. Burger, Hot Dog, Fries)</string>
    <string name="btnEditRestaurant">Edit Restaurant</string>
    <string name="btnUpdateRestaurant">Save Restaurant</string>
    <string name="btnRemoveRestaurant">Remove Restaurant</string>
    <string name="title_activity_edit_restaurant">Update Restaurant</string>
    <string name="title_activity_map">Restaurant Map</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search">Search</string>
    <string name="txtGroupMembers"><u>Group Members</u></string>
    <string name="txtSearch">Search Restaurant names or tags</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="action_new_restaurant">Add Restaurant</string>
    <string name="title_activity_splash">Restaurant Guide</string>

    <string name="hello_world">Hello world!</string>
</resources>
