<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.thanasi.materialrestaurantguide.EditRestaurantActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtRestaurantName"
            android:id="@+id/txtCreateRestaurant"
            android:inputType="text"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAddress"
            android:id="@+id/txtAddress" />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPhone"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtPhone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/txtDesc"
            android:id="@+id/txtDesc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/txtTags"
            android:id="@+id/txtTags" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.CardView
            android:id="@+id/btnUpdateRestaurant"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_gravity="bottom|right"
            card_view:cardBackgroundColor="#3D88EC"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="4dp">

            <TextView android:id="@+id/txtBtnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8.5dp"
                android:paddingBottom="8.5dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif-medium"
                android:text="Save Restaurant" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>